Misc fixes and enhancements

--- a/.env.example
+++ b/.env.example
@@ -39,9 +39,10 @@ OLLAMA_ENDPOINT=http://localhost:11434
 # Optional: Fallback endpoint
 OLLAMA_ENDPOINT_FALLBACK=
 
-# Redis Configuration (optional, for distributed collaboration)
+# Redis Configuration (REQUIRED for collaboration features)
 REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
+# REQUIRED - Generate a strong password for Redis
+REDIS_PASSWORD=your_redis_password_here
 
 # Database Configuration
 # SQLite is used by default, no configuration needed
@@ -51,9 +52,16 @@ REDIS_PASSWORD=
 # Security Configuration
 # Generate a secure session secret: openssl rand -hex 32
 SESSION_SECRET=your_session_secret_here
+# Generate a secure JWT secret: openssl rand -hex 32
+JWT_SECRET=your_jwt_secret_here
+# CSRF protection secret: openssl rand -hex 32
+CSRF_SECRET=your_csrf_secret_here
 
 # CORS Configuration (comma-separated list of allowed origins)
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+
+# Content Security Policy
+CSP_DIRECTIVES=default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' ws: wss:;
 
 # Logging Configuration
 LOG_LEVEL=info
@@ -106,3 +114,5 @@ ENABLE_HOT_RELOAD=true
 ENABLE_DEBUG_LOGGING=false
 MOCK_AI_RESPONSES=false
 # Set to true to use mock responses for testing without API calls
+DISABLE_AUTH=false
+# Set to true to disable all authentication (for development/testing only)
