--- a/package.json
+++ b/package.json
@@ -12,22 +12,24 @@
   "description": "TestBench: a fully configurable, multi-model, multi-provider AI inference platform.",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.103.0",
-    "redis": "^5.1.1",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "supertest": "^7.1.1"
   }
 }
